tests/build_scripts/snapshots/r#mod__build_scripts__embedded_assets__collected_css_files.snap
---
source: tests/build_scripts/embedded_assets.rs
expression: file_mappings
snapshot_kind: text
---
[
    (
        "[TEST_ROOT]/assets/css/style.css",
        "/css/style.css",
    ),
]
