tests/build_scripts/snapshots/r#mod__build_scripts__embedded_assets__empty_static_assets_rs.snap
---
source: tests/build_scripts/embedded_assets.rs
expression: static_file_content
snapshot_kind: text
---
#[must_use]
pub fn get_embedded_static_assets() -> std::collections::HashMap<String, &'static [u8]> {
    // No assets found
    std::collections::HashMap::new()
}
