tests/build_scripts/snapshots/r#mod__build_scripts__embedded_assets__empty_templates_rs.snap
---
source: tests/build_scripts/embedded_assets.rs
expression: templates_file_content
snapshot_kind: text
---
#[must_use]
pub fn get_embedded_templates() -> std::collections::HashMap<String, &'static str> {
    // No templates found
    std::collections::HashMap::new()
}
